--- a/index.html
+++ b/index.html
@@ -23,44 +23,42 @@
 
   <body>
     <header class="header">
-      <div class="container">
-        <div class="header-wraper">
-          <nav class="header-nav">
-            <a class="logo-link link" href="./index.html"
-              >Web<span class="header-logo">Studio</span></a
-            >
-            <ul class="header-nav-list list">
-              <li class="header-nav-item">
-                <a class="header-nav-link link" href="./index.html">Studio</a>
-              </li>
+      <div class="container header-wraper">
+        <nav class="header-nav">
+          <a class="logo-link link" href="./index.html"
+            >Web<span class="header-logo">Studio</span></a
+          >
+          <ul class="header-nav-list list">
+            <li class="header-nav-item">
+              <a class="header-nav-link link" href="./index.html">Studio</a>
+            </li>
 
-              <li class="header-nav-item">
-                <a class="header-nav-link link" href="">Portfolio</a>
-              </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link link" href="">Portfolio</a>
+            </li>
 
-              <li class="header-nav-item">
-                <a class="header-nav-link link" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <address class="header-contacts link">
-            <ul class="header-contacts-list list">
-              <li class="header-contacts-item">
-                <a
-                  class="header-contacts-link link"
-                  href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-contacts link">
+          <ul class="header-contacts-list list">
+            <li class="header-contacts-item">
+              <a
+                class="header-contacts-link link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
 
-              <li class="header-contacts-item">
-                <a class="header-contacts-link link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+            <li class="header-contacts-item">
+              <a class="header-contacts-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
 
