--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header">
       <div class="container header-wraper">
         <nav class="header-nav">
-          <a class="logo-link link" href="./index.html"
+          <a class="logo-link header-logo-link link" href="./index.html"
             >Web<span class="header-logo">Studio</span></a
           >
           <ul class="header-nav-list list">
@@ -289,7 +289,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="logo-link link" href="./index.html"
+        <a class="logo-link footer-logo-link link" href="./index.html"
           >Web<span class="footer-logo">Studio</span></a
         >
         <p class="footer-text section-item-text">
