--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="advantages-item">
               <h3 class="advantages-item-title section-item-title">
                 Punctuality
               </h3>
@@ -94,7 +94,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="advantages-item">
               <h3 class="advantages-item-title section-item-title">
                 Diligence
               </h3>
@@ -104,7 +104,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="advantages-item">
               <h3 class="advantages-item-title section-item-title">
                 Technologies
               </h3>
